fix progress bar on safari

--- a/sass/_pages.scss
+++ b/sass/_pages.scss
@@ -755,29 +755,20 @@
 			opacity: 1;
 
 				progress[value] {
-				  -webkit-appearance: none;
-				  appearance: none;
 				  background-color: scale-color($sun, $lightness: 70%);
-				  color: $sun;
-				  height: 10px;
-				  border: none;
 					border-radius: 10px;
 				}
 
 				progress::-webkit-progress-bar {
-				  background-color: $freshsun;
-				  border-radius: 2px;
-				  color: $sun;
+				  background-color: scale-color($sun, $lightness: 70%);
 					border-radius: 10px;
 				}
 
 				progress::-webkit-progress-value {
-				  background-color: $sun;
 					border-radius: 10px;
 				}
 
 				progress::-moz-progress-bar{
-					background-color: $sun;
 					border-radius: 10px;
 				}
 
